# line_follower_pkg_ros

./: README.md
line_follower/: CMakeLists.txt  package.xml
line_follower/cfg/: PIDControl.cfg
line_follower/scripts/: AutoMove.py  CamRcv.py  Movement.py  teleop.py  threshold.py
